@@ -3,47 +3,44 @@ package org.jenkinsci.plugins.gitclient;
 import hudson.EnvVars;
 import hudson.Util;
 import hudson.model.TaskListener;
-import hudson.plugins.git.IGitAPI;
 import hudson.remoting.VirtualChannel;
 import hudson.util.StreamTaskListener;
-import org.apache.commons.io.FileUtils;
-import org.eclipse.jgit.lib.ObjectId;
+import org.apache.commons.lang.StringUtils;
 import org.eclipse.jgit.lib.Repository;
+import org.junit.After;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
-import org.jvnet.hudson.test.Issue;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.Map;
 import java.util.Random;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
 /**
- * Git API Tests which doesn't need a working initialized git repo.
- * Implemented in JUnit 4
+ * Git API Test which are solely for CLI git,
+ * but doesn't need an initialized working repo.
+ * These tests are not implemented for JGit.
  */
 
 @RunWith(Parameterized.class)
-public class GitAPITestNotIntialized {
-
+public class GitAPICliGitNotIntializedTest {
     @Rule
     public GitClientSampleRepoRule repo = new GitClientSampleRepoRule();
 
     private int logCount = 0;
-    private final Random random = new Random();
     private static final String LOGGING_STARTED = "Logging started";
     private LogHandler handler = null;
     private TaskListener listener;
@@ -53,14 +50,15 @@ public class GitAPITestNotIntialized {
 
     private GitClient testGitClient;
     private File testGitDir;
-    private CliGitCommand cliGitCommand;
 
-    public GitAPITestNotIntialized(final String gitImplName) { this.gitImplName = gitImplName; }
+    public GitAPICliGitNotIntializedTest(final String gitImplName) {
+        this.gitImplName = gitImplName;
+    }
 
     @Parameterized.Parameters(name = "{0}")
     public static Collection gitObjects() {
         List<Object[]> arguments = new ArrayList<>();
-        String[] gitImplNames = {"git", "jgit", "jgitapache"};
+        String[] gitImplNames = {"git"};
         for (String gitImplName : gitImplNames) {
             Object[] item = {gitImplName};
             arguments.add(item);
@@ -77,7 +75,7 @@ public class GitAPITestNotIntialized {
         Random random = new Random();
         Thread.sleep(2000L + random.nextInt(4000)); // Wait 2-6 seconds before priming the cache
         TaskListener mirrorListener = StreamTaskListener.fromStdout();
-        File tempDir = Files.createTempDirectory("PrimeGitAPITestNotInitialized").toFile();
+        File tempDir = Files.createTempDirectory("PrimeGitAPITestCliGitNotInitialized").toFile();
         WorkspaceWithRepo cache = new WorkspaceWithRepo(tempDir, "git", mirrorListener);
         cache.localMirror();
         Util.deleteRecursive(tempDir);
@@ -98,99 +96,39 @@ public class GitAPITestNotIntialized {
 
         testGitClient = workspace.getGitClient();
         testGitDir = workspace.getGitFileDir();
-        cliGitCommand = workspace.getCliGitCommand();
     }
 
-    @Test
-    public void testHasGitRepoWithInvalidGitRepo() throws Exception {
-        // Create an empty directory named .git - "corrupt" git repo
-        File emptyDotGitDir = workspace.file(".git");
-        assertTrue("mkdir .git failed", emptyDotGitDir.mkdir());
-        boolean hasGitRepo = testGitClient.hasGitRepo();
-        // Don't assert condition if the temp directory is inside the dev dir.
-        // CLI git searches up the directory tree seeking a '.git' directory.
-        // If it finds such a directory, it uses it.
-        if (emptyDotGitDir.getAbsolutePath().contains("target") && emptyDotGitDir.getAbsolutePath().contains("tmp")) {
-            return;
+    @After
+    public void afterTearDown() {
+        try {
+            String messages = StringUtils.join(handler.getMessages(), ";");
+            assertTrue("Logging not started: " + messages, handler.containsMessageSubstring(LOGGING_STARTED));
+        } finally {
+            handler.close();
         }
-        assertFalse("Invalid Git repo reported as valid in " + emptyDotGitDir.getAbsolutePath(), hasGitRepo);
     }
 
-    @Test
-    public void testSetSubmoduleUrl() throws Exception {
-        workspace.cloneRepo(workspace, workspace.localMirror());
-        workspace.launchCommand("git", "checkout", "tests/getSubmodules");
-        testGitClient.submoduleInit();
-
-        String DUMMY = "/dummy";
-        IGitAPI igit = (IGitAPI) testGitClient;
-        igit.setSubmoduleUrl("modules/firewall", DUMMY);
-
-        // create a brand new Git object to make sure it's persisted
-        WorkspaceWithRepo subModuleVerify = new WorkspaceWithRepo(testGitDir, gitImplName, TaskListener.NULL);
-        IGitAPI subModuleIgit = (IGitAPI) subModuleVerify.getGitClient();
-        assertEquals(DUMMY, subModuleIgit.getSubmoduleUrl("modules/firewall"));
-    }
-
-    private final String remoteMirrorURL = "https://github.com/jenkinsci/git-client-plugin.git";
-
-    @Issue("JENKINS-23299")
-    @Test
-    public void testGetHeadRev() throws Exception {
-        Map<String, ObjectId> heads = testGitClient.getHeadRev(remoteMirrorURL);
-        ObjectId master = testGitClient.getHeadRev(remoteMirrorURL, "refs/heads/master");
-        assertEquals("URL is " + remoteMirrorURL + ", heads is " + heads, master, heads.get("refs/heads/master"));
-
-        /* Test with a specific tag reference - JENKINS-23299 */
-        ObjectId knownTag = testGitClient.getHeadRev(remoteMirrorURL, "refs/tags/git-client-1.10.0");
-        ObjectId expectedTag = ObjectId.fromString("1fb23708d6b639c22383c8073d6e75051b2a63aa"); // commit SHA1
-        assertEquals("Wrong SHA1 for git-client-1.10.0 tag", expectedTag, knownTag);
-    }
-
-
-    /**
-     * Test getHeadRev with wildcard matching in the branch name.
-     * Relies on the branches in the git-client-plugin repository
-     * include at least branches named:
-     *   master
-     *   tests/getSubmodules
-     *
-     * Also relies on a specific return ordering of the values in the
-     * pattern matching performed by getHeadRev, and relies on not
-     * having new branches created which match the patterns and will
-     * occur earlier than the expected value.
+    /* Submodule checkout in JGit does not support renamed submodules.
+     * The test branch intentionally includes a renamed submodule, so this test
+     * is not run with JGit.
      */
     @Test
-    public void testGetHeadRevWildCards() throws Exception {
-        Map<String, ObjectId> heads = testGitClient.getHeadRev(workspace.localMirror());
-        ObjectId master = testGitClient.getHeadRev(workspace.localMirror(), "refs/heads/master");
-        assertEquals("heads is " + heads, heads.get("refs/heads/master"), master);
-        ObjectId wildOrigin = testGitClient.getHeadRev(workspace.localMirror(), "*/master");
-        assertEquals("heads is " + heads, heads.get("refs/heads/master"), wildOrigin);
-        ObjectId master1 = testGitClient.getHeadRev(workspace.localMirror(), "not-a-real-origin-but-allowed/m*ster"); // matches master
-        assertEquals("heads is " + heads, heads.get("refs/heads/master"), master1);
-        ObjectId getSubmodules1 = testGitClient.getHeadRev(workspace.localMirror(), "X/g*[b]m*dul*"); // matches tests/getSubmodules
-        assertEquals("heads is " + heads, heads.get("refs/heads/tests/getSubmodules"), getSubmodules1);
-        ObjectId getSubmodules = testGitClient.getHeadRev(workspace.localMirror(), "N/*et*modul*");
-        assertEquals("heads is " + heads, heads.get("refs/heads/tests/getSubmodules"), getSubmodules);
-    }
-
-    /* Opening a git repository in a directory with a symbolic git file instead
-     * of a git directory should function properly.
-     */
-    @Test
-    public void testWithRepositoryWorksWithSubmodule() throws Exception {
+    public void testSubmoduleCheckoutSimple() throws Exception {
         workspace.cloneRepo(workspace, workspace.localMirror());
         assertSubmoduleDirs(testGitDir, false, false);
 
         /* Checkout a branch which includes submodules (in modules directory) */
-        String subBranch = testGitClient instanceof CliGitAPIImpl ? "tests/getSubmodules" : "tests/getSubmodules-jgit";
+        String subBranch = "tests/getSubmodules";
         String subRefName = "origin/" + subBranch;
         testGitClient.checkout().ref(subRefName).branch(subBranch).execute();
-        testGitClient.submoduleInit();
+        assertSubmoduleDirs(testGitDir, true, false);
+
         testGitClient.submoduleUpdate().recursive(true).execute();
+        assertSubmoduleDirs(testGitDir, true, true);
+        assertSubmoduleContents(testGitDir);
         assertSubmoduleRepository(new File(testGitDir, "modules/ntp"));
         assertSubmoduleRepository(new File(testGitDir, "modules/firewall"));
+        assertSubmoduleRepository(new File(testGitDir, "modules/sshkeys"));
     }
 
     private void assertSubmoduleRepository(File submoduleDir) throws Exception {
@@ -242,14 +180,14 @@ public class GitAPITestNotIntialized {
 
     private void assertFileContains(File file, String expectedContent) throws IOException {
         assertFileExists(file);
-        final String fileContent = FileUtils.readFileToString(file, "UTF-8");
+        final String fileContent = Files.readString(file.toPath(), StandardCharsets.UTF_8);
         final String message = file + " does not contain '" + expectedContent + "', contains '" + fileContent + "'";
         assertTrue(message, fileContent.contains(expectedContent));
     }
 
     private void assertFileContents(File file, String expectedContent) throws IOException {
         assertFileExists(file);
-        final String fileContent = FileUtils.readFileToString(file, "UTF-8");
+        final String fileContent = Files.readString(file.toPath(), StandardCharsets.UTF_8);
         assertEquals(file + " wrong content", expectedContent, fileContent);
     }
 
