@@ -3,45 +3,46 @@ package org.jenkinsci.plugins.gitclient;
 import hudson.EnvVars;
 import hudson.Util;
 import hudson.model.TaskListener;
+import hudson.plugins.git.IGitAPI;
 import hudson.remoting.VirtualChannel;
 import hudson.util.StreamTaskListener;
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.lang.StringUtils;
+import org.eclipse.jgit.lib.ObjectId;
 import org.eclipse.jgit.lib.Repository;
-import org.junit.After;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
+import org.jvnet.hudson.test.Issue;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
+import java.util.Map;
 import java.util.Random;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
 /**
- * Git API Test which are solely for CLI git,
- * but doesn't need an initialized working repo.
- * These tests are not implemented for JGit.
+ * Git API Tests which doesn't need a working initialized git repo.
+ * Implemented in JUnit 4
  */
 
 @RunWith(Parameterized.class)
-public class GitAPITestCliGitNotIntialized {
+public class GitAPINotIntializedTest {
+
     @Rule
     public GitClientSampleRepoRule repo = new GitClientSampleRepoRule();
 
     private int logCount = 0;
-    private final Random random = new Random();
     private static final String LOGGING_STARTED = "Logging started";
     private LogHandler handler = null;
     private TaskListener listener;
@@ -53,14 +54,12 @@ public class GitAPITestCliGitNotIntialized {
     private File testGitDir;
     private CliGitCommand cliGitCommand;
 
-    public GitAPITestCliGitNotIntialized(final String gitImplName) {
-        this.gitImplName = gitImplName;
-    }
+    public GitAPINotIntializedTest(final String gitImplName) { this.gitImplName = gitImplName; }
 
     @Parameterized.Parameters(name = "{0}")
     public static Collection gitObjects() {
         List<Object[]> arguments = new ArrayList<>();
-        String[] gitImplNames = {"git"};
+        String[] gitImplNames = {"git", "jgit", "jgitapache"};
         for (String gitImplName : gitImplNames) {
             Object[] item = {gitImplName};
             arguments.add(item);
@@ -77,7 +76,7 @@ public class GitAPITestCliGitNotIntialized {
         Random random = new Random();
         Thread.sleep(2000L + random.nextInt(4000)); // Wait 2-6 seconds before priming the cache
         TaskListener mirrorListener = StreamTaskListener.fromStdout();
-        File tempDir = Files.createTempDirectory("PrimeGitAPITestCliGitNotInitialized").toFile();
+        File tempDir = Files.createTempDirectory("PrimeGitAPITestNotInitialized").toFile();
         WorkspaceWithRepo cache = new WorkspaceWithRepo(tempDir, "git", mirrorListener);
         cache.localMirror();
         Util.deleteRecursive(tempDir);
@@ -101,37 +100,96 @@ public class GitAPITestCliGitNotIntialized {
         cliGitCommand = workspace.getCliGitCommand();
     }
 
-    @After
-    public void afterTearDown() {
-        try {
-            String messages = StringUtils.join(handler.getMessages(), ";");
-            assertTrue("Logging not started: " + messages, handler.containsMessageSubstring(LOGGING_STARTED));
-        } finally {
-            handler.close();
+    @Test
+    public void testHasGitRepoWithInvalidGitRepo() throws Exception {
+        // Create an empty directory named .git - "corrupt" git repo
+        File emptyDotGitDir = workspace.file(".git");
+        assertTrue("mkdir .git failed", emptyDotGitDir.mkdir());
+        boolean hasGitRepo = testGitClient.hasGitRepo();
+        // Don't assert condition if the temp directory is inside the dev dir.
+        // CLI git searches up the directory tree seeking a '.git' directory.
+        // If it finds such a directory, it uses it.
+        if (emptyDotGitDir.getAbsolutePath().contains("target") && emptyDotGitDir.getAbsolutePath().contains("tmp")) {
+            return;
         }
+        assertFalse("Invalid Git repo reported as valid in " + emptyDotGitDir.getAbsolutePath(), hasGitRepo);
     }
 
-    /* Submodule checkout in JGit does not support renamed submodules.
-     * The test branch intentionally includes a renamed submodule, so this test
-     * is not run with JGit.
+    @Test
+    public void testSetSubmoduleUrl() throws Exception {
+        workspace.cloneRepo(workspace, workspace.localMirror());
+        workspace.launchCommand("git", "checkout", "tests/getSubmodules");
+        testGitClient.submoduleInit();
+
+        String DUMMY = "/dummy";
+        IGitAPI igit = (IGitAPI) testGitClient;
+        igit.setSubmoduleUrl("modules/firewall", DUMMY);
+
+        // create a brand new Git object to make sure it's persisted
+        WorkspaceWithRepo subModuleVerify = new WorkspaceWithRepo(testGitDir, gitImplName, TaskListener.NULL);
+        IGitAPI subModuleIgit = (IGitAPI) subModuleVerify.getGitClient();
+        assertEquals(DUMMY, subModuleIgit.getSubmoduleUrl("modules/firewall"));
+    }
+
+    private final String remoteMirrorURL = "https://github.com/jenkinsci/git-client-plugin.git";
+
+    @Issue("JENKINS-23299")
+    @Test
+    public void testGetHeadRev() throws Exception {
+        Map<String, ObjectId> heads = testGitClient.getHeadRev(remoteMirrorURL);
+        ObjectId master = testGitClient.getHeadRev(remoteMirrorURL, "refs/heads/master");
+        assertEquals("URL is " + remoteMirrorURL + ", heads is " + heads, master, heads.get("refs/heads/master"));
+
+        /* Test with a specific tag reference - JENKINS-23299 */
+        ObjectId knownTag = testGitClient.getHeadRev(remoteMirrorURL, "refs/tags/git-client-1.10.0");
+        ObjectId expectedTag = ObjectId.fromString("1fb23708d6b639c22383c8073d6e75051b2a63aa"); // commit SHA1
+        assertEquals("Wrong SHA1 for git-client-1.10.0 tag", expectedTag, knownTag);
+    }
+
+
+    /**
+     * Test getHeadRev with wildcard matching in the branch name.
+     * Relies on the branches in the git-client-plugin repository
+     * include at least branches named:
+     *   master
+     *   tests/getSubmodules
+     *
+     * Also relies on a specific return ordering of the values in the
+     * pattern matching performed by getHeadRev, and relies on not
+     * having new branches created which match the patterns and will
+     * occur earlier than the expected value.
      */
     @Test
-    public void testSubmoduleCheckoutSimple() throws Exception {
+    public void testGetHeadRevWildCards() throws Exception {
+        Map<String, ObjectId> heads = testGitClient.getHeadRev(workspace.localMirror());
+        ObjectId master = testGitClient.getHeadRev(workspace.localMirror(), "refs/heads/master");
+        assertEquals("heads is " + heads, heads.get("refs/heads/master"), master);
+        ObjectId wildOrigin = testGitClient.getHeadRev(workspace.localMirror(), "*/master");
+        assertEquals("heads is " + heads, heads.get("refs/heads/master"), wildOrigin);
+        ObjectId master1 = testGitClient.getHeadRev(workspace.localMirror(), "not-a-real-origin-but-allowed/m*ster"); // matches master
+        assertEquals("heads is " + heads, heads.get("refs/heads/master"), master1);
+        ObjectId getSubmodules1 = testGitClient.getHeadRev(workspace.localMirror(), "X/g*[b]m*dul*"); // matches tests/getSubmodules
+        assertEquals("heads is " + heads, heads.get("refs/heads/tests/getSubmodules"), getSubmodules1);
+        ObjectId getSubmodules = testGitClient.getHeadRev(workspace.localMirror(), "N/*et*modul*");
+        assertEquals("heads is " + heads, heads.get("refs/heads/tests/getSubmodules"), getSubmodules);
+    }
+
+    /* Opening a git repository in a directory with a symbolic git file instead
+     * of a git directory should function properly.
+     */
+    @Test
+    public void testWithRepositoryWorksWithSubmodule() throws Exception {
         workspace.cloneRepo(workspace, workspace.localMirror());
         assertSubmoduleDirs(testGitDir, false, false);
 
         /* Checkout a branch which includes submodules (in modules directory) */
-        String subBranch = "tests/getSubmodules";
+        String subBranch = testGitClient instanceof CliGitAPIImpl ? "tests/getSubmodules" : "tests/getSubmodules-jgit";
         String subRefName = "origin/" + subBranch;
         testGitClient.checkout().ref(subRefName).branch(subBranch).execute();
-        assertSubmoduleDirs(testGitDir, true, false);
-
+        testGitClient.submoduleInit();
         testGitClient.submoduleUpdate().recursive(true).execute();
-        assertSubmoduleDirs(testGitDir, true, true);
-        assertSubmoduleContents(testGitDir);
         assertSubmoduleRepository(new File(testGitDir, "modules/ntp"));
         assertSubmoduleRepository(new File(testGitDir, "modules/firewall"));
-        assertSubmoduleRepository(new File(testGitDir, "modules/sshkeys"));
     }
 
     private void assertSubmoduleRepository(File submoduleDir) throws Exception {
@@ -183,14 +241,14 @@ public class GitAPITestCliGitNotIntialized {
 
     private void assertFileContains(File file, String expectedContent) throws IOException {
         assertFileExists(file);
-        final String fileContent = FileUtils.readFileToString(file, "UTF-8");
+        final String fileContent = Files.readString(file.toPath(), StandardCharsets.UTF_8);
         final String message = file + " does not contain '" + expectedContent + "', contains '" + fileContent + "'";
         assertTrue(message, fileContent.contains(expectedContent));
     }
 
     private void assertFileContents(File file, String expectedContent) throws IOException {
         assertFileExists(file);
-        final String fileContent = FileUtils.readFileToString(file, "UTF-8");
+        final String fileContent = Files.readString(file.toPath(), StandardCharsets.UTF_8);
         assertEquals(file + " wrong content", expectedContent, fileContent);
     }
 
