@@ -5,13 +5,13 @@ import hudson.EnvVars;
 import hudson.Launcher;
 import hudson.Util;
 import hudson.model.TaskListener;
-import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang.StringUtils;
 import org.eclipse.jgit.lib.ObjectId;
 
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.AtomicMoveNotSupportedException;
 import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.Files;
@@ -67,6 +67,13 @@ public class WorkspaceWithRepo {
         }
     }
 
+
+    private boolean isShallow() {
+        File shallowMarker = new File(".git", "shallow");
+        return shallowMarker.isFile();
+    }
+
+
     /**
      * Populate the local mirror of the git client plugin repository.
      * Returns path to the local mirror directory.
@@ -92,7 +99,12 @@ public class WorkspaceWithRepo {
                      * the final destination directory.
                      */
                     Path tempClonePath = Files.createTempDirectory(targetDir.toPath(), "clone-");
-                    cliGitCommand.run("clone", "--reference", f.getCanonicalPath(), "--mirror", repoURL, tempClonePath.toFile().getAbsolutePath());
+                    String destination = tempClonePath.toFile().getAbsolutePath();
+                    if (isShallow()) {
+                        cliGitCommand.run("clone", "--mirror", repoURL, destination);
+                    } else {
+                        cliGitCommand.run("clone", "--reference", f.getCanonicalPath(), "--mirror", repoURL, destination);
+                    }
                     if (!clone.exists()) { // Still a race condition, but a narrow race handled by Files.move()
                         renameAndDeleteDir(tempClonePath, cloneDirName);
                     } else {
@@ -157,7 +169,7 @@ public class WorkspaceWithRepo {
     void touch(File gitDir, String fileName, String content) throws Exception {
         File f = new File(gitDir, fileName);
         f.createNewFile();
-        FileUtils.writeStringToFile(f, content, "UTF-8");
+        Files.writeString(f.toPath(), content, StandardCharsets.UTF_8);
     }
 
     void tag(String tag) throws IOException, InterruptedException {
@@ -205,7 +217,7 @@ public class WorkspaceWithRepo {
     }
 
     String contentOf(String path) throws IOException {
-        return FileUtils.readFileToString(file(path), "UTF-8");
+        return Files.readString(file(path).toPath(), StandardCharsets.UTF_8);
     }
 
     CliGitCommand getCliGitCommand() {
